--- a/src/components/Comments/Comments.scss
+++ b/src/components/Comments/Comments.scss
@@ -1,7 +1,19 @@
 @use '../../styles/partials/variables' as *; 
 @use '../../styles/partials/mixins' as *;
 
-.comment__content {
-    color: red;
-    background-color: blue;
+.comments {
+&__profilepic {
+    display: flex;
+    background-color: #E1E1E1;
+    border-radius: 50%;
+    max-width: 36px;
+    max-height: 36px;
+    width: 100%;
+    height: 36px;
+    margin-right: 16px;
+    margin-top: 16px;
+}
+
+
+
 }
