--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,7 @@ font-family: "Avenir Next", "Sans-serif";
 }
 
 .siteheader__logo{
-  display: inline-block;
+  display: block;
   margin-left: auto;
   margin-right: auto;
 }
@@ -42,3 +42,17 @@ font-family: "Avenir Next", "Sans-serif";
 }
 
 
+.video__image {
+  width: 150px;
+}
+
+.nextvideo {
+&__ul {
+  list-style: none;
+  padding: 0;
+}
+&__list {
+  display: flex;
+  flex-direction: row;
+}
+}
