--- a/src/components/Comments/Comments.scss
+++ b/src/components/Comments/Comments.scss
@@ -13,7 +13,12 @@
     margin-right: 16px;
     margin-top: 16px;
 }
-
+&__commentList {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
 
 
 }
