--- a/src/App.scss
+++ b/src/App.scss
@@ -6,42 +6,16 @@
 font-family: "Avenir Next", "Sans-serif";
 }
 
-.siteheader__logo{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-.site-header{
-  &__logo {
-    width: 100px;
-  }
-
-  &__searchicon {
-    width: 50px;
-    height: 50px;
-    color: red;
-  }
-  &__searchbar {
-    width: 150px;
-    border: none;
-  }
+.comments__number {
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 600;
+  margin: 0;
 }
 
-.mainvideo__toptext {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+.comments__ul {
+  border-bottom: 1px solid #E1E1E1;
 }
-.mainvideo__bottomtext {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.mainvideo__video {
-  width: 100vw;
-}
-
-
 .video__image {
   width: 150px;
 }
