--- a/src/components/CommentForm/CommentForm.scss
+++ b/src/components/CommentForm/CommentForm.scss
@@ -5,6 +5,26 @@
     display: flex;
     flex-direction: row;
 
+&__title {
+    margin: 0;
+    margin-top: 24px;
+    font-size: 12px;
+    line-height: 20px;
+    font-weight: 600;
+    color: #AFAFAF;
+}
+&__input {
+    border: 1px solid #E1E1E1;
+    background-color: #FAFAFA;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-bottom: 60px;
+    font-family: "Avenir Next", "Sans-serif";
+    border-radius: 4px;
+}
+::placeholder {
+    color: #000000;
+}
 &__profilepic{
     display: flex;
     background-image: url(../../assets/images/Mohan-muruge.jpg);
@@ -24,5 +44,26 @@
     flex-direction: column;
     width: 100%;
 }
+&__button {
+    margin-top: 16px;
+    height: 40px;
+    background-color: #0095FF;
+    border-radius: 4px;
+    border: none;
+    color: #FFFFFF;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    font-size: 13px;
+    line-height: 20px;
+    font-weight: 600;
+}
 
+&__icon {
+    position: absolute;
+    padding-right: 60%;
+    width: 20px;
+    height: 20px;
+}
 }
