--- a/src/components/Comments/Comments.scss
+++ b/src/components/Comments/Comments.scss
@@ -2,6 +2,9 @@
 @use '../../styles/partials/mixins' as *;
 
 .comments {
+    padding-left: 16px;
+    padding-right: 16px;
+
 &__profilepic {
     display: flex;
     background-color: #E1E1E1;
@@ -11,13 +14,29 @@
     width: 100%;
     height: 36px;
     margin-right: 16px;
-    margin-top: 16px;
 }
 &__commentList {
     list-style: none;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    border-top: 1px solid #E1E1E1;
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
+&__text {
+    font-size: 13px;
+    line-height: 18px;
+    font-weight: 400;
+}
+&__top {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-bottom: 16px;
+}
+&__name {
+    font-weight: 600;
 }
 
 
