--- a/src/components/Comments/Comments.scss
+++ b/src/components/Comments/Comments.scss
@@ -5,6 +5,11 @@
     padding-left: 16px;
     padding-right: 16px;
 
+    @include tablet {
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+
 &__profilepic {
     display: flex;
     background-color: #E1E1E1;
@@ -37,6 +42,9 @@
 }
 &__name {
     font-weight: 600;
+}
+&__date {
+    color:#AFAFAF;;
 }
 
 
