--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,6 +7,13 @@
     padding-left: 16px;
     padding-right: 16px;
 
+    @include tablet {
+        display: flex;
+        flex-direction: row;
+        margin-top: 16px;
+        margin-bottom: 16px;
+    }
+
     &__logo {
       display: block;
       margin-left: auto;
@@ -15,10 +22,21 @@
       max-width: 120px;
       margin-top: 16px;
       margin-bottom: 16px;
+
+      @include tablet {
+        margin: 0;
+      }
+    }
+    &__tabletright {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+
     }
     &__search {
         border: 1px solid #E1E1E1;
         width: 100%;
+        height: 40px;
         margin-right: 16px;
         display: flex;
         flex-direction: row;
@@ -62,6 +80,24 @@
         background-position: center;
         background-size: cover;
         background-color: #E1E1E1;
+
+        @include tablet {
+            display: none;
+        }
+    }
+    &__profilepictablet {
+        @include tablet {
+            display: flex;
+            border-radius: 50%;
+            max-width: 36px;
+            max-height: 36px;
+            width: 100%;
+            height: 36px;
+            background-image: url(../../assets/images/Mohan-muruge.jpg);
+            background-position: center;
+            background-size: cover;
+            background-color: #E1E1E1;
+        }
     }
     &__btn {
         background-color: #0095FF;
@@ -78,6 +114,12 @@
         font-size: 13px;
         line-height: 20px;
         font-weight: 600;
+
+        @include tablet {
+            width: 150px;
+            margin-top: 0;
+            
+        }
         
     }
     &__uploadicon {
@@ -85,6 +127,10 @@
         height: 20px;
         position: absolute;
         padding-right: 80%;
+
+        @include tablet{
+            padding-right: 15%;
+        }
     }
   }
   
