--- a/src/App.scss
+++ b/src/App.scss
@@ -5,16 +5,54 @@
 .App {
 font-family: "Avenir Next", "Sans-serif";
 }
+.mainvideo {
+    width: 100vw; 
+    margin-top: 24px;
+    object-fit: cover;
+    max-height: 30vh;
+    
+    @include tablet {
+        margin-top: 0;
+        max-height: 40vh;
+    }
+}
+.desktopcontent {
+  @include desktop {
+    display: flex;
+    flex-direction: row;
+  }
+}
+.desktopleft {
+  @include desktop {
+  display: flex;
+  flex-direction: column;
+  width: 60vw;
+  margin-left: 100px;
+  }
+}
 
 .comments__number {
   font-size: 13px;
   line-height: 18px;
   font-weight: 600;
   margin: 0;
+
+  @include tablet {
+    font-size: 14px;
+    line-height: 22px;
+    font-weight: 700;
+  }
+  @include desktop {
+    margin-top: 36px;
+  }
 }
 
 .comments__ul {
   border-bottom: 1px solid #E1E1E1;
+
+  @include tablet {
+    margin-top: 24px;
+  }
 }
 
 .nextvideo {
@@ -24,6 +62,10 @@ font-family: "Avenir Next", "Sans-serif";
   @include tablet {
     padding-left: 24px;
     padding-right: 24px;
+  }
+  @include desktop {
+    border-left: 1px solid #E1E1E1;
+    padding-right: 100px;
   }
 
 &__ul {
@@ -41,6 +83,10 @@ font-family: "Avenir Next", "Sans-serif";
   line-height: 20px;
   font-weight: 600;
   color: #AFAFAF;
+
+  @include desktop {
+    margin-top: 36px;
+  }
 }
 &__image {
   min-width: 100px;
@@ -50,20 +96,43 @@ font-family: "Avenir Next", "Sans-serif";
   object-fit: cover;
   background: #E1E1E1;
   margin-right: 16px;
+
+  @include tablet {
+    min-width: 150px;
+    max-width: 150px;
+    height: 90px;
+  }
 }
 &__text {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  @include tablet {
+    width: 23%;
+  }
+  @include desktop {
+    width: 100%;
+  }
 }
 &__title {
   font-size: 13px;
   line-height: 18px;
   font-weight: 600;
+
+  @include tablet {
+    font-size: 14px;
+    line-height: 22px;
+  }
 }
 &__channel {
   font-size: 13px;
   line-height: 18px;
   font-weight: 400;
+
+  @include tablet {
+    font-size: 14px;
+    line-height: 22px;
+  }
 }
 }
