--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -50,6 +50,7 @@
         margin: 0;
         margin-top: auto;
         margin-bottom: auto;
+        padding-top: 8px;
       }
     }
     &__search {
