fix styling for both homepage and uploadpage for all browser sizes

--- a/src/components/Comments/Comments.scss
+++ b/src/components/Comments/Comments.scss
@@ -32,6 +32,10 @@
     padding-top: 16px;
     padding-bottom: 16px;
 
+    @include tablet {
+        justify-content: flex-start;
+    }
+
     @include desktop{
         padding-right: 24px;
     }
