--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -106,7 +106,12 @@
   @include tablet {
     min-width: 150px;
     max-width: 150px;
-    height: 90px;
+    height: 80px;
+  }
+  @include desktop {
+    min-width: 110px;
+    max-width: 110px;
+    height: 65px;
   }
 }
 &__text {
