--- a/src/pages/UploadPage/UploadPage.scss
+++ b/src/pages/UploadPage/UploadPage.scss
@@ -2,13 +2,56 @@
 @use '../../styles//partials/mixins' as *;
 @use "../../styles/partials/font" as *;
 
+
+.bordertop {
+    border-top: 1px solid  #E1E1E1;
+    margin-top: 16px;
+
+    @include tablet {
+        margin-top: 24px;
+    }
+}
+
 .uploadpage {
     margin-left: 16px;
     margin-right: 16px;
 
+    @include tablet {
+        margin-left: 24px;
+        margin-right: 24px;
+    }
+    @include desktop {
+        margin-left: 100px;
+        margin-right: 100px;
+    }
+
+&__desktopwrap {
+    display:flex;
+    flex-direction: column;
+    
+
+    @include desktop {
+        display: flex;
+        flex-direction: row;
+        border-bottom: 1px solid #E1E1E1;
+        padding-bottom: 24px;
+    }
+}
 &__header {
     font-weight: 600;
     margin-top: 24px;
+    color: #323232;
+    font-size: 24px;
+    line-height: 32px;
+
+    @include tablet {
+        font-weight: 700;
+        margin-top: 36px;
+        font-size: 33px;
+        line-height: 44px;
+        border-bottom: 1px solid #E1E1E1;
+        padding-bottom: 24px;
+    }
 }
 &__title {
     margin-top: 24px;
@@ -18,15 +61,30 @@
     color: #AFAFAF;
 }
 &__img {
-    background-image: url("../../assets/images/mydog.jpg");
-    background-position: center;
-    background-size: cover;
-    width: 250px;
-    height: 150px;
+    background-image: url("../../assets/images/mydog.jpg"); 
+    background-position: center; 
+    background-size: cover; 
+    width: 100%; 
+    height: 150px; 
     border-radius: 4px;
+
+    @include tablet {
+        width: 400px;
+        height: 200px;
+    }
 }
 &__form {
     margin-right: 16px;
+
+    @include tablet {
+        border-bottom: 1px solid  #E1E1E1;
+        padding-bottom: 24px;
+    }
+    @include desktop {
+        border: none;
+        width: 100%;
+        margin-left: 24px;
+    }
 }
 &__formtitle {
     margin-top: 16px;
@@ -35,6 +93,10 @@
     line-height: 20px;
     font-weight: 600;
     color: #AFAFAF;
+
+    @include desktop {
+        margin-top: 24px;
+    }
 }
 &__formdes {
     margin-top: 16px;
@@ -82,6 +144,11 @@
     font-size: 13px;
     line-height: 20px;
     font-weight: 600;
+    
+    @include tablet {
+        font-size: 14px;
+        line-height: 22px;
+    }
 }
 &__cancelbtn{
     background-color: #FFFFFF;
@@ -98,5 +165,33 @@
     font-size: 13px;
     line-height: 20px;
     font-weight: 600;
+
+    @include tablet {
+        font-size: 14px;
+        line-height: 22px;
+    }
+}
+&__buttongroup {
+    @include tablet {
+        display: flex;
+        flex-direction: row-reverse;
+        width: 40%;
+        margin-left: auto;
+        margin-top: 8px;
+    }
+}
+&__publishicon {
+    height: 20px;
+    width: 20px;
+    position: absolute;
+    padding-right: 80%;
+
+    @include tablet{
+        padding-right: 15%;
+    }
+    @include desktop {
+        padding-right: 9%;
+    }
+
 }
 }
