change uploadpage styling

--- a/src/pages/UploadPage/UploadPage.scss
+++ b/src/pages/UploadPage/UploadPage.scss
@@ -61,7 +61,7 @@
     color: #AFAFAF;
 }
 &__img {
-    background-image: url("../../assets/images/mydog.jpg"); 
+    background-image: url("../../assets/images/Upload-video-preview.jpg"); 
     background-position: center; 
     background-size: cover; 
     width: 100%; 
